[project]
name = "stereo-vision"
version = "0.1.0"
description = ""
authors = [
    {name = "Marek",email = "marek.j.swakon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pymavlink (>=2.4.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stereo-vision"
version = "0.1.0"
description = ""
authors = ["Marek Swakoń"]
packages = [{ include = "stereo_vision" }]